--- a/index.html
+++ b/index.html
@@ -1,44 +1,21 @@
-<!-- TODO 1: Create the HTML Boilerplate -->
+<!-- Example image URL -->
+<h1>It's my Birthday!</h1>
 
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Faisal's Portfolio</h1>
-
-<h2>I am a Web Devloper</h2>
-
-<hr>
-
-<h3><a href="./public/movie.html">Movie Project</a></h3>
-<img src="./assets/images/Faisal Movie Project.png" height="200" alt="Movie Ranking Project">
-  
-<hr> 
-
-<h4><a href="./public/index.html">Birthday Project</a></h4>
-<img src="./assets/images/Faisal Birthday Project.png" height="200" ="Birthday">
-<hr>
-<a href="./public/about.html">About Me</a>
-<a href="./public/faisalcontact.html">Contact Me</a>
-</body>
-</html>
+<h2>On the 20 July</h2>
 
 
+<img src="https://raw.githubusercontent.com/appbrewery/webdev/main/birthday-cake3.4.jpeg
+" alt="birthday image">
 
-<!-- TODO 2: Add Your previous projects' HTML into the public folder -->
+<h3>What to Bring:</h3>
 
-<!-- TODO 3: Take screenshots of your project previews and add the images to the images folder -->
+<ul>
+    <li>Balloons(I Love Balloons)</li>
+    <li>Cake(I am really good at eating)</li>
+    <li>An Appetite(There will be lots of food) </li>
+</ul>
 
-<!-- TODO 4: Add titles/subtitles etc. -->
+<h3>This is where you need to go:</h3>
 
-<!-- TODO 5: Add a link to the project pages -->
-
-<!-- TODO 6: Add images to show the project previews
-HINT for TODO 6: You can use the height attribute set to 200 to make the image smaller:
-https://developer.mozilla.org/en-US/docs/Web/HTML/Element/img#attr-height -->
-
-<!-- TODO 7: Add the Contact Me and About Me page links -->
+<!-- Example Google Maps Link -->
+<a href="https://www.google.com/maps/@35.7040744,139.5577317,3a,75y,289.6h,87.01t,0.72r/data=!3m6!1e1!3m4!1sgT28ssf0BB2LxZ63JNcL1w!2e0!7i13312!8i6656">Google map link</a>
